February 7, 2010 Tristin Celestin <cetris1@umbc.edu>

 * plugins/dfsound/pulseaudio.c: Added PulseAudio support (not working yet).
 * plugins/dfsound/pulseaudiosimple.c: Added PulseAudio Simple API support
   (not working with SPUasync).
 * plugins/dfsound/alsa.c: Fixed the alsa plugin so that it produces cleaner
   audio through PulseAudio.
 * plugins/dfsound/nullsnd.c: Don't compile when PulseAudio or PulseAudio
   Simple API support is enabled.
 * plugins/dfsound/spu.c: Added strings for PulseAudio plugin.
 * plugins/dfsound/Makefile.am: Added pulseaudio.c and pulseaudiosimple.c.
 * configure.ac: Added PulseAudio-related stuff.
 * po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/pcsx.pot: Updated.

February 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/src/HID_Utilities.h: Removed duplicate file.
 * macosx/plugins/HIDInput/src/PlugPAD.c: #include HID_Utilities_External.h
   instead of HID_Utilities.h.
 * macosx/plugins/HIDInput/src/PadController.m: Likewise.
 * macosx/plugins/HIDInput/src/KeyConfig.h: Likewise.

January 31, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/EmuThread.m: Use setjmp()/longjmp() for resetting to avoid nasty
   plugin issues.
 * libpcsxcore/mdec.c: Minor cleanup.

January 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/LnxMain.c: Don't always move the mouse to the right for screensaver
   disabling.
 * win32/pcsx.sln, win32/pcsx.vcproj: Added VC8 Project File.

January 23, 2010 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Moved several definations into cdriso.h.
 * libpcsxcore/cdriso.h: Likewise.
 * libpcsxcore/ppf.c: Added PPF patch support.
 * libpcsxcore/ppf.h: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/cdrom.h: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Linux.h: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * macosx/main.m: Likewise.